--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <html>
  <head>
-  <title>Добро пожаловать на сайт нашего университета! </title>
+  <title>Первый в мире открытый университет! </title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  </head>
- <body>
-	<P style="color:red; font-size:18">
-	Это сайт нашего любимого университета!<BR>
-	<BR>
-	1000 - 7 ???
-	</P>
- 	<meta charset="utf-8">
-	
-	<table width="100%" cellspacing="0" border="1">	
-		<TR>
-			<TH>Table column 1</TH>
-			<TH>Table column 2</TH>
-		</TR>
-		<TR>
-			<TD>
-			  <a href="teachers.php"> <P>Наши преподаватели</P> </a>
-			  <a href="chair.php"> <P>Кафедры</P> </a>
-			  <a href="groups.php"> <P>Учебные группы</P> </a> 
-			  <a href="lesson.php"> <P>Расписание занятий</P> </a>
-			  <a href="subject.php"> <P>Предметы</P> </a> 
-				
-			</TD>
-			<TD>
-			  <img src="library.png" alt="This is how my library will look like" />			
-			</TD>
-		</TR>
+
+ 
+
+
+
+
+
+ <body link="red" vlink="blue">
+		<center><P style="color:white; font-size:40; font-weight: bold; font-family: 'Open Sans', sans-serif;">
+		Добро пожаловать на сайт Tokyo-Ghoul University!<BR>
+		<BR>
+		</P></center>
+
+
+			<div class="menu">
+				<a href="teachers.php";> <P style="font-size:24; font-weight: bolder; font-family: 'Open Sans', sans-serif">Наши преподаватели</P> </a>
+				<a href="institutes.php"> <P style="font-size:24; font-weight: bolder; font-family: 'Open Sans', sans-serif">Институты</P> </a> 
+				<a href="groups.php"> <P style="font-size:24; font-weight: bolder; font-family: 'Open Sans', sans-serif">Учебные группы</P> </a>  
+				<a href="lesson.php"> <P style="font-size:24; font-weight: bolder; font-family: 'Open Sans', sans-serif">Расписание занятий</P> </a> 
+				<a href="subject.php"> <P style="font-size:24; font-weight: bolder; font-family: 'Open Sans', sans-serif">Предметы</P> </a>  
+			</div>
+
 
  </body>
+
 </html>
